k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: tram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/itkimjunhee/2026-tram-server:3d93e8b
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: tram
spec:
  selector:
    app: server
  ports:
    - port: 4000
      targetPort: 4000
